# reVidx

./: .gitignore  README-pypi.md  README.md  pyproject.toml  readme.md
revidx/: __init__.py  cli.py  core.py  utils.py
