[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revidx"
version = "1.2.7"
description = "reVidx: Re-encode video to AVC/MP3 for legacy compatibility."
readme = "README-pypi.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors =[
    {name = "voidsnax"}
]
keywords = ["video", "ffmpeg", "converter", "h264", "mp3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama",
]

[project.urls]
Homepage = "https://github.com/voidsnax/reVidx"

[project.scripts]
revidx = "revidx.cli:main"